Fix the text in the "Status" column being slightly offset vertically when compared to other columns. This was due to the default border spacing being ~2px, whereas WordPress uses 0px spacing for its own tables.
   Note that this change makes the status column slightly more vertically compressed. The change is fairly insignificant; I'll just accept it.

git-svn-id: https://plugins.svn.wordpress.org/broken-link-checker/trunk@1025095 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/links-page.css
+++ b/css/links-page.css
@@ -84,6 +84,10 @@ td.column-new-url .mini-status {
 	color: black;
 }
 
+table.mini-status {
+	border-spacing: 0;
+}
+
 /* Styles for broken links, redirects and other link states or types */
 
 .blc-redirect .blc-link-url {
